<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TV_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RegisterTitle" />

        <TextView
            android:id="@+id/TV_Mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <ScrollView
        android:layout_width="275dp"
        android:layout_height="432dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="257dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="131dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ET_Name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/Name"
                        android:inputType="text"
                        android:maxLength="25" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="198dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ET_SurnameP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/SurNameP"
                        android:inputType="text"
                        android:maxLength="15" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="277dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ET_SurnameM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/SurNameM"
                        android:inputType="text"
                        android:maxLength="15" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ET_Phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/Phone"
                        android:inputType="number"
                        android:maxLength="10" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ET_BirthDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/Birth"
                        android:inputType="date"
                        android:maxLength="10" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:layout_constraintVertical_bias="0.013">

                <TextView
                    android:id="@+id/TV_Sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sex" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/RB_Male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/SexM" />

                    <RadioButton
                        android:id="@+id/RB_Female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/SexF" />
                </RadioGroup>

                <Button
                    android:id="@+id/B_SignIn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Next" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
